# hse-dd

./: .gitignore  LICENSE  README.md  attempt_1.ipynb  detector_train.ipynb  pyproject.toml  test.py
data_preparation/: README.md  analysis.py  main.py  requirements.txt
hse_dd/src/: nn.py  utils.py
reports/: dasmehdixtr_errors_report.txt  dasmehdixtr_success_report.txt  mcagriaksoy_errors_report.txt  mcagriaksoy_success_report.txt
src/: __init__.py  analysis.py  dataset.py  nn.py  utils.py
src/hse_dd/: nn.py  pipeline.py  utils.py
